добавлено описание пка

--- a/отчет.tex
+++ b/отчет.tex
@@ -323,8 +323,14 @@
 \section{Возможно малый ПКА}
 На основе академического регулярного выражения был построен переключающийся конечный автомат распознающий его язык.
 
+Каждая ветка ПКА распознает одно из регулярных выражений $L_1$ и $L_2$, которые в пересечении дают исходную регулярку.
+
+$L_1 = ((aa|ab|ac)^*(bc|cc|ac)bb | aba(a|c)^*c)^*$
+
+$L_2 = (((a|b)(a|b|c))^*(a|b|c)(a|b|c)bb | abacc^*)^*$
+
 \begin{center}
-\includegraphics[width=170mm]{PKA1}
+\includegraphics[width=170mm]{PKA3}
 \end{center}
 
 Изображение этого ПКА находится в файле PKA.png
